--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@freakycoder/react-native-bounceable": "^0.2.5",
     "@react-native-async-storage/async-storage": "^1.15.11",
     "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/bottom-tabs": "^6.0.9",
@@ -19,11 +20,15 @@
     "axios": "^0.24.0",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-dynamic-search-bar": "^2.0.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-looped-carousel": "^0.1.13",
+    "react-native-paper": "^4.10.1",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
+    "react-native-spinkit": "^1.5.1",
+    "react-native-super-grid": "^4.1.3",
     "react-native-vector-icons": "^9.0.0",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2"
