--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.24.0",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-animatable": "^1.3.3",
     "react-native-dynamic-search-bar": "^2.0.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-looped-carousel": "^0.1.13",
@@ -31,7 +32,8 @@
     "react-native-super-grid": "^4.1.3",
     "react-native-vector-icons": "^9.0.0",
     "react-redux": "^7.2.6",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "toggle-switch-react-native": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
