--- a/package.json
+++ b/package.json
@@ -22,9 +22,15 @@
     "react-native": "0.66.3",
     "react-native-animatable": "^1.3.3",
     "react-native-dynamic-search-bar": "^2.0.1",
+    "react-native-geocoder": "^0.5.0",
+    "react-native-geolocation-service": "^5.3.0-beta.3",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-looped-carousel": "^0.1.13",
+    "react-native-maps": "^0.29.4",
+    "react-native-maps-directions": "^1.8.0",
     "react-native-paper": "^4.10.1",
+    "react-native-permissions": "^3.1.0",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
